# soda-internal-api

./: .dockerignore  .env.template  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.web  GameCog.py  LICENSE  Makefile  README.md  app.py  authorised.json  bot.py  build.py  build.sh  deploy.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  environment.yml  google-secret1.json  installed.txt  logging-README.md  main.py  migrate_ocp_data.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requiremnts.txt  shared.py  temp.py  test.db  test.db   test.py  test_api_endpoints.py  testing.py  token_generator.py  (+2 more)
.github/workflows/: cd.yml  ci.yml  main.yml  (+3 more)
client/: package-lock.json  package.json  tailwind.config.js
cogs/: BasicCog.py  GameCog.py  HelperCog.py  ModerationCog.py  MusicCog.py
data/: Byte Battles.json  Tech Trek Trivia.json  sample.json
migrations/: README.md  __init__.py  add_prefix_to_organizations.py
modules/: README.md
routes/: api.py  auth_types.py  views.py
scripts/: README.md  add_missing_tables.py  simple_db_viewer.py  visualize_db.py
server/: main.py  requirements.txt  shared.py
soda-backend-api/: .gitignore  README.md  appConfig copy.json  events.json  main.py  requirements.txt  response.json
static/: asset-manifest.json
temp/: txt
template/: panel.html
templates/: dashboard.html  gamepanel.html  home.html  login.html  unauthorized.html
tests/: test_ago_expressions.py  test_citation_edge_cases.py  test_citation_parsing.py  test_date_final.py  test_date_parsing.py  test_improved_parsing.py  test_last_month_parsing.py  test_last_weekday.py  test_month_name_parsing.py  test_month_range_with_last.py  test_month_ranges.py  test_relative_weekday.py  test_single_month_parsing.py  test_single_weekday_parsing.py  test_summarizer.py  test_timefhuman_fallback.py  test_timefhuman_parsing.py  test_timeframe_extraction.py  test_weekday_name_parsing.py  test_weekday_range.py  test_weekday_ranges.py
utils/: Jeopardy.py  JeopardyQuestion.py  JeprodyGame.py  JeprodyQuestion.py  Team.py  TokenManager.py  bot.py  config.py  db.py  token.py
web/: .gitignore  CD.sh  LICENSE  deploy.sh  package-lock.json  package.json  tailwind.config.js
(+318 files in other folders)
